# ONNX_OCR_CPP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
python/: README.md  ctc_decode_py.py  main.py  setup.py
python/src/: ctc_decode.cpp
